[project]
name = "project2-greku-ivan-m-25255"
version = "0.1.1"
description = "Работа с базой данных"
authors = [
    {name = "Militans",email = "ivangreku48@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)",
    "prettytable (>=3.17.0,<4.0.0)"
]


[tool.poetry]
packages = [
    { include = "primitive_db", from = "src" },
]
[tool.poetry.scripts]
project = "src.primitive_db.main:main"
database = "src.primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)",
]
